<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">PocketSharing</string>
    <string name="upnp_service">Upnp Service</string>
    <string name="refresh">Refresh</string>
    <string name="change_dmr">Change</string>
    <string name="type_to_filter">type to filter</string>
    <string name="menu_refresh_devices">Refresh Devices List</string>
    <string name="menu_rescan_sdcard">Rescan Sdcard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="library">Library</string>
    <string name="now_playing">Now Playing</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="enter_keyword_here">Enter keyword here</string>
    <string name="cancel">Cancel</string>

    <string-array name="libray_pager_list">
        <item>Home Network</item>
        <item>Playlist</item>
        <item>Internet</item>
    </string-array>
    <string-array name="menu_items">
        <item>Refresh</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string name="minimize">Minimize</string>
    <string name="close">Close</string>
    <string name="device_name">Device Name:</string>
    <string name="device_type">Device Type:</string>
    <string name="device_udn">Device UDN:</string>
    <string name="select">Select</string>
    <string name="writeToTag">Write TAG</string>
    <string name="anim_duration">300</string>
    <string name="slash">/</string>
    <string name="play_to">Play to remote renderer</string>
    <string name="view_mode">View Mode</string>

    <string-array name="didlobject_contextmenu">
        <item>Add to other playlist</item>
        <item>Download</item>
    </string-array>
    <string-array name="container_contextmenu">
        <item>Add All To playlist</item>
        <item>Remove All From playlist</item>
    </string-array>
    <string-array name="playlistitem_contextmenu">
        <item>Download</item>
    </string-array>
    <string-array name="playlist_contextmenu">
        <item>Clean</item>
        <item>Rename</item>
        <item>Remove</item>
    </string-array>
    <string-array name="playlist_unsaved_contextmenu">
        <item>Clean</item>
    </string-array>
     <string-array name="viewmode">
        <item>All Items</item>
        <item>Audio Only</item>
        <item>Video Only</item>
        <item>Image Only</item>
    </string-array>

    <string name="dev1_name">Nguyen Dac Phu</string>
    <string name="dev1_email">ngdacphu.khtn@gmail.com</string>
    <string name="dev2_name">Le Tan Minh Quan</string>
    <string name="dev2_email">letanminhquan@gmail.com</string>
    <string name="app_desc">DLNA Application For Android</string>
    <string name="how_to_use">How To Use</string>
    <string name="tap_for_a_nfc_tag_to_write">Tap for a NFC TAG to write</string>
    <string name="sorry_this_item_cannot_be_played_">Sorry. This item cannot be played.</string>
    <string name="cannot_play_item">Cannot play item</string>
    <string name="cannot_start_upnp_service_please_try_again_later">Cannot start Upnp Service, please try again later</string>
    <string name="upnp_service_info">Upnp Service Info</string>
    <string name="ok">Ok</string>
    <string name="network_info">Network Info</string>
    <string name="cannot_find_a_wifi_connection_for_upnpservice_please_connect_to_a_wifi_network_or_run_wifi_hotspot_to_use_the_app_">Cannot find a Wi-Fi connection for UpnpService. Please connect to a Wi-Fi network or run Wi-Fi hotspot to use the app.</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="exit">Exit</string>
    <string name="network_interface_changed_application_must_restart_">Network interface changed. Application must restart.</string>
    <string name="network_changed">Network changed</string>
    <string name="network_error">Network error</string>
    <string name="network_disabled">Network disabled</string>
    <string name="network_disabled_try_to_re_enabled_network">Network disabled, try to re-enabled network</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="are_you_sure_want_to_exit_">Are you sure want to exit?</string>
    <string name="cannot_find_specified_device_from_nfc_tag_please_check_if_device_is_connected_to_the_network_or_the_data_on_your_tag">Cannot find specified device from Nfc TAG, please check if device is connected to the network or the data on your TAG</string>
    <string name="write_device_info_to_nfc_tag_complete_">Write device info to NFC Tag complete.</string>
    <string name="write_failed_cause_">"Write failed; cause = "</string>
    <string name="please_enable_nfc_on_you_device_first">Please enable NFC on you device first</string>
    <string name="loading_image">Loading image</string>
    <string name="cannot_connect_to_renderer">Cannot connect to renderer</string>
    <string name="image_loading_error_reduce_image_quality_in_settings_maybe_fix_this_problem">Image loading error. Reduce image quality in Settings maybe fix this problem</string>
    <string name="check_item_url_">Checking item url</string>
    <string name="you_are_in_root_of_this_data_source">You are in root of this data source</string>
    <string name="cannot_process_playlist">Cannot process playlist</string>
    <string name="cannot_contact_to_dms_server">Cannot contact to dms server</string>
    <string name="waiting_for_add_all_items">Waiting for add all items</string>
    <string name="waiting_for_remove_all_items">Waiting for remove all items</string>
    <string name="processing">Processing</string>
    <string name="error_occur_">"Error occur: "</string>
    <string name="loading">Loading</string>
    <string name="waiting_for_loading_items">Waiting for loading items</string>
    <string name="folder_is_empty">Folder is empty</string>
    <string name="select_action">Select Action</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="adding_item_to_playlist_">Adding item to playlist \"</string>
    <string name="container_added_to_playlist_failed">Container added to playlist failed</string>
    <string name="container_added_to_playlist_sucessfully">Container added to playlist sucessfully</string>
    <string name="remove_container_from_playlist_">Remove container from playlist \"</string>
    <string name="container_removed_from_playlist_failed">Container removed from playlist failed</string>
    <string name="container_removed_to_playlist_sucessfully">Container removed to playlist sucessfully</string>
    <string name="select_playlist_to_add">Select Playlist To Add</string>
    <string name="item_added_to_playlist_sucessfully">Item added to playlist sucessfully</string>
    <string name="current_playlist_is_full">Current playlist is full</string>
    <string name="an_error_occurs_try_again_later">An error occurs, try again later</string>
    <string name="error_occurs">Error occurs</string>
    <string name="load_more_result">Load more result</string>
    <string name="warning">Warning</string>
    <string name="this_will_clear_all_item_in_this_playlist">This will clear all item in this playlist</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="insert_playlist_name_">Insert playlist name:</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="playlist_is_empty">Playlist is empty</string>
    <string name="create_playlist_fail">Create playlist fail</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_to_delete_">Are you sure to delete \"</string>
    <string name="delete_playlist_success">Delete playlist success</string>
    <string name="delete_playlist_failed_try_again_later">Delete playlist failed, try again later</string>
    <string name="comfirm">Comfirm</string>
    <string name="are_you_sure_to_remove_this_playlist_">Are you sure to remove this playlist?</string>
    <string name="are_you_sure_to_clean_this_playlist_">Are you sure to clean this playlist?</string>
    <string name="cleaning_playlist">Cleaning playlist</string>
    <string name="clean_playlist_sucessfully">Clean playlist sucessfully</string>
    <string name="loading_all_playlist">Loading All Playlist</string>
    <string name="loading_playlist_items">Loading Playlist Items</string>
    <string name="cannot_get_playlist">Cannot get playlist</string>
    <string name="loading_all_playlists">Loading all playlists</string>
    <string name="loading_playlist">Loading playlist</string>
    <string name="current_playlist_is_empty">Current playlist is empty</string>
    <string name="select_filter_mode">Select filter mode</string>
    <string name="download">Download</string>
    <string name="device_info">Device info</string>
    <string name="no_network_found">No network found</string>
    <string name="scanning_content_on_sdcard">Scanning content on sdcard</string>
    <string name="scan_content_on_sdcard">Scan content on sdcard</string>
    <string name="scanning">Scanning</string>
    <string name="set_dmr_fail_cannot_get_dmr_info_udn_">"Set DMR fail. Cannot get DMR info; UDN = "</string>
    <string name="set_dms_fail_cannot_get_dms_info_udn_">"Set DMS fail. Cannot get DMS info; UDN = "</string>
    <string name="service_is_running">Service is running</string>
    <string name="coreupnpservice_started">CoreUpnpService started</string>
    <string name="contacting_to_youtube">Contacting to Youtube</string>
    <string name="sorry_this_item_cannot_be_downloaded">Sorry, this item cannot be downloaded</string>
    <string name="download_fail">Download fail</string>
    <string name="item_cannot_be_downloaded">Item cannot be downloaded</string>
    <string name="download_file">Download file</string>
    <string name="downloading_content">Downloading content</string>
    <string name="download_content">Download content</string>
    <string name="download_complete">Download complete</string>
    <string name="cannot_download_item_">"Cannot download item : "</string>
    <string name="download_failed_file_">"Download failed, file: "</string>
    <string name="download_complete_file_">"Download complete, file: "</string>
    <string name="contacting_to_youtube_server">Contacting to youtube server</string>
    <string name="starting_download">Starting download</string>
    <string name="action_canceled">Action canceled</string>
    <string name="download_file_failed_try_again_later_">Download file failed. Try again later.</string>
    <string name="all_items">All items</string>
    <string name="audio_only">Audio only</string>
    <string name="video_only">Video only</string>
    <string name="image_only">Image only</string>
    <string name="added_item_to_playlist">Added item to playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="remove_playlist_sucessfully">Remove playlist sucessfully</string>
    <string name="change_playlist_name">Change Playlist Name</string>
    <string name="playlist_processor_is_null">Playlist processor is null</string>
    <string name="playlist_is_full_0_items_inserted_">Playlist is full, 0 items inserted.</string>
    <string name="_items_inserted">" items inserted"</string>
    <string name="_items_removed">" items removed"</string>

</resources>